--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>@ShaneC0</title>
-</head>
-<body>
-	<a href="https://shanec0.github.io/Pathfinder">Pathfiner</a>
-	<a href="https://shanec0.github.io/Sorter">Sorter</a>
-	<a href="https://trackbackui.azurewebsites.net">Trackback</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="index.css" />
+    <title>@ShaneC0</title>
+  </head>
+  <body>
+    <div class="title">
+      <h3 class="header">Shane Connors</h3>
+      <h5 class="subheader">Lorem Ipsum</h5>
+    </div>
+    <div class="link-group">
+      <a class="link" href="https://shanec0.github.io/Pathfinder">Pathfiner</a>
+      <a class="link" href="https://shanec0.github.io/Sorter">Sorter</a>
+      <a class="link" href="https://trackbackui.azurewebsites.net">Trackback</a>
+    </div>
+  </body>
 </html>
