--- a/index.html
+++ b/index.html
@@ -4,18 +4,33 @@
     <meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="index.css" />
-    <title>@ShaneC0</title>
+	<link rel="stylesheet" href="styles.css" />
+    <title>Portfolio - @ShaneC0</title>
   </head>
   <body>
     <div class="title">
       <h3 class="header">Shane Connors</h3>
-      <h5 class="subheader">Lorem Ipsum</h5>
+      <h5 class="subheader">Full Stack Developer</h5>
     </div>
     <div class="link-group">
-      <a class="link" href="https://shanec0.github.io/Pathfinder">Pathfiner</a>
-      <a class="link" href="https://shanec0.github.io/Sorter">Sorter</a>
-      <a class="link" href="https://trackbackui.azurewebsites.net">Trackback</a>
+	<div class="link-card">
+		<a class="link" href="https://shanec0.github.io/Pathfinder">Pathfiner</a>
+		<span>- React -</span>
+		<img class="card-picture" src="images/pathfinder.PNG" alt="">
+		<span>A* and Dijkstra pathfinding visualization tool.</span>
+	</div>
+	<div class="link-card">
+	  <a class="link" href="https://shanec0.github.io/Sorter">Sorter</a>
+	  <span>- React -</span>
+	  <img class="card-picture" src="images/sorter.PNG" alt="">
+	  <span>Sorting algorithm visualization tool.</span>
+	</div>
+	<div class="link-card">
+	  <a class="link" href="https://trackbackui.azurewebsites.net">Trackback</a>
+	  <span>- ASP.NET Core -</span>
+	  <img class="card-picture" src="images/trackback.PNG" alt="">
+	  <span>Project manager.</span>
+	</div>
     </div>
   </body>
 </html>
