--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Source+Sans+Pro:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Portfolio - @ShaneC0</title>
   </head>
   <body>
@@ -13,24 +16,42 @@
       <h5 class="subheader">Full Stack Developer</h5>
     </div>
     <div class="link-group">
-	<div class="link-card">
-		<a class="link" href="https://shanec0.github.io/Pathfinder">Pathfiner</a>
-		<span>- React -</span>
-		<img class="card-picture" src="images/pathfinder.PNG" alt="">
-		<span>A* and Dijkstra pathfinding visualization tool.</span>
-	</div>
-	<div class="link-card">
-	  <a class="link" href="https://shanec0.github.io/Sorter">Sorter</a>
-	  <span>- React -</span>
-	  <img class="card-picture" src="images/sorter.PNG" alt="">
-	  <span>Sorting algorithm visualization tool.</span>
-	</div>
-	<div class="link-card">
-	  <a class="link" href="https://trackbackui.azurewebsites.net">Trackback</a>
-	  <span>- ASP.NET Core -</span>
-	  <img class="card-picture" src="images/trackback.PNG" alt="">
-	  <span>Project manager.</span>
-	</div>
+      <div class="link-card">
+        <a class="link" href="https://shanec0.github.io/Pathfinder"
+          >Pathfiner</a
+        >
+        <hr class="underline" />
+        <span>A* and Dijkstra pathfinding visualization tool.</span>
+        <img class="card-picture" src="images/pathfinder.PNG" alt="" />
+        <h2>Stack</h2>
+        <hr class="underline underline-sm" />
+        <span>Javascript</span>
+        <span>React</span>
+      </div>
+      <div class="link-card">
+        <a class="link" href="https://shanec0.github.io/Sorter">Sorter</a>
+        <hr class="underline" />
+        <span>Sorting algorithm visualization tool.</span>
+        <img class="card-picture" src="images/sorter.PNG" alt="" />
+        <h2>Stack</h2>
+        <hr class="underline underline-sm" />
+        <span>Javascript</span>
+        <span>React</span>
+      </div>
+      <div class="link-card">
+        <a class="link" href="https://trackbackui.azurewebsites.net"
+          >Trackback</a
+        >
+        <hr class="underline" />
+        <span>Project manager.</span>
+        <img class="card-picture" src="images/trackback.PNG" alt="" />
+        <h2>Stack</h2>
+        <hr class="underline underline-sm" />
+        <span>C#</span>
+        <span>ASP.NET Core</span>
+        <span>SQLServer</span>
+        <span>Boostrap</span>
+      </div>
     </div>
   </body>
 </html>
