guess what? more styling.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
         <img class="card-picture" src="images/pathfinder.PNG" alt="" />
         <h2>Stack</h2>
         <hr class="underline underline-sm" />
-        <span>Javascript</span>
-        <span>React</span>
+        <span>Javascript - React</span>
+        <h2>Links</h2>
+        <hr class="underline underline-sm" />
+        <a href="https://shanec0.github.io/Pathfinder">Website</a>
+        <a href="https://www.github.com/shanec0/Pathfinder">Repository</a>
       </div>
       <div class="link-card">
         <a class="link" href="https://shanec0.github.io/Sorter">Sorter</a>
@@ -35,8 +38,11 @@
         <img class="card-picture" src="images/sorter.PNG" alt="" />
         <h2>Stack</h2>
         <hr class="underline underline-sm" />
-        <span>Javascript</span>
-        <span>React</span>
+        <span>Javascript - React</span>
+        <h2>Links</h2>
+        <hr class="underline underline-sm" />
+        <a href="http://shanec0.github.io/Sorter">Website</a>
+        <a href="https://www.github.com/shanec0/Sorter">Repository</a>
       </div>
       <div class="link-card">
         <a class="link" href="https://trackbackui.azurewebsites.net"
@@ -47,10 +53,14 @@
         <img class="card-picture" src="images/trackback.PNG" alt="" />
         <h2>Stack</h2>
         <hr class="underline underline-sm" />
-        <span>C#</span>
-        <span>ASP.NET Core</span>
-        <span>SQLServer</span>
-        <span>Boostrap</span>
+        <span
+          >C# - ASP.NET Core - Entity Framework Core - SQLServer -
+          Bootstrap</span
+        >
+        <h2>Links</h2>
+        <hr class="underline underline-sm" />
+        <a href="https://trackbackui.azurewebsites.net">Website</a>
+        <a href="https://www.github.com/shanec0/trackback">Repository</a>
       </div>
     </div>
   </body>
