full page project

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav>
-        <h2>Portfolio</h2>
+        <h2>ShaneC0</h2>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Projects</a></li>
@@ -23,6 +23,7 @@
     </header>
 
     <main>
+
       <section class="home">
         <div class="welcome-text">
           <h1>Shane Connors</h1>
@@ -30,34 +31,24 @@
         </div>
       </section>
 
-      <section class="projects">
-        <h1>Projects</h1>
-        <div class="card-group">
-
-          <div class="card">
-            <h3>Pathfinder</h3>
-            <h5>Javascript, React</h5>
-            <p>Educational pathfinding demonstration tool.</p>
-          </div>
-
-          <div class="card">
-            <h3>Sorter</h3>
-            <h5>Javascript, React</h5>
-            <p>Educational sorting demonstration tool.</p>
-          </div>
-
-          <div class="card">
-            <h3>Trackback</h3>
-            <h5>C#, ASP.NET Core, Entity Framework Core</h5>
-            <p>Project management dashboard.</p>
-          </div>
-          
+      <section class="pathfinder">
+        <h1>Pathfinder</h1>
+        <div class="info">
+          <h2>Educational pathfinding demonstration tool.</h2>
+          <h3>Stack</h3>
+          <span>JavaScript, React</span>
+          <h3>Links</h3>
+          <span><a href="https://github.com/shanec0/pathfinder">Github</a></span>
+          <span><a href="https://shanec0.github.io/Pathfinder">Website</a></span>
         </div>
+        <img src="./images/pathfinder.PNG" alt="pathfinder">
       </section>
 
       <section class="contact">
         <h1>Contact Me</h1>
       </section>
+
     </main>
+
   </body>
 </html>
