--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     </header>
 
     <main>
-
       <section class="home">
         <div class="welcome-text">
           <h1>Shane Connors</h1>
@@ -35,20 +34,33 @@
         <h1>Pathfinder</h1>
         <div class="info">
           <h2>Educational pathfinding demonstration tool.</h2>
-          <h3>Stack</h3>
-          <span>JavaScript, React</span>
-          <h3>Links</h3>
-          <span><a href="https://github.com/shanec0/pathfinder">Github</a></span>
-          <span><a href="https://shanec0.github.io/Pathfinder">Website</a></span>
+
+          <h3>JavaScript, React</h3>
+          <div class="link-group">
+            <h4><a href="https://github.com/shanec0/pathfinder">Repository</a></h4>
+            <h4><a href="https://shanec0.github.io/Pathfinder">Website</a></h4>
+          </div>
         </div>
-        <img src="./images/pathfinder.PNG" alt="pathfinder">
+        <img src="./images/pathfinder.PNG" alt="pathfinder" />
+      </section>
+
+      <section class="sorter">
+        <h1>Sorter</h1>
+        <div class="info">
+          <h2>Educational sorting demonstration tool.</h2>
+
+          <h3>JavaScript, React</h3>
+          <div class="link-group">
+            <h4><a href="https://github.com/shanec0/sorter">Repository</a></h4>
+            <h4><a href="https://shanec0.github.io/Sorter">Website</a></h4>
+          </div>
+        </div>
+        <img src="./images/sorter.PNG" alt="sorter" />
       </section>
 
       <section class="contact">
         <h1>Contact Me</h1>
       </section>
-
     </main>
-
   </body>
 </html>
