guess what more styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="section">
         <div class="home">
           <div>
-            <h1>Shane Connors</h1>
+            <h6>Shane Connors</h6>
             <p>Self-Taught Full Stack Developer</p>
           </div>
         </div>
@@ -54,9 +54,44 @@
         </div>
       </div>
 
-      <div class="section">Sorter</div>
+      <div class="section">
+        <div class="sorter">
+          <h1>Sorter</h1>
+          <div class="info">
+            <h2>Sorting visualization tool.</h2>
 
-      <div class="section">Contact</div>
+            <h3>JavaScript, React</h3>
+            <p>
+              Animates popular array sorting algorithms with a bar chart.
+            </p>
+            <div class="link-group">
+            <a href="https://shanec0.github.io/Sorter">Website</a>
+            <a href="https://github.com/shanec0/sorter">Repository</a>
+          </div>
+          </div>
+          <img src="./images/sorter.PNG" alt="sorter" />
+        </div>
+      </div>
+
+      <div class="section">
+        <div class="trackback">
+          <h1>Trackback</h1>
+          <div class="info">
+            <h2>Project Manager.</h2>
+
+            <h3>C#, ASP.NET Core, SQL</h3>
+            <p>
+              Control your workflow by keeping up with tasks and resources.
+            </p>
+            <div class="link-group">
+            <a href="https://trackbackui.azurewebsites.net">Website</a>
+            <a href="https://github.com/shanec0/trackback">Repository</a>
+          </div>
+          </div>
+          <img src="./images/trackback.PNG" alt="trackback" />
+
+      </div>
+    </div>
     </div>
 
     <script src="./lib/fullpage.min.js"></script>
