replaced sorter with classroom

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
     <div id="fullpage">
       <div class="section">
         <div class="home">
-          <div>
+          <div class="welcome-text">
             <h6>Shane Connors</h6>
             <p>Self-Taught Full Stack Developer</p>
           </div>
+
         </div>
       </div>
 
@@ -55,21 +56,20 @@
       </div>
 
       <div class="section">
-        <div class="sorter">
-          <h1>Sorter</h1>
+        <div class="classroom">
+          <h1>Classroom</h1>
           <div class="info">
-            <h2>Sorting visualization tool.</h2>
+            <h2>Google Classroom clone.</h2>
 
-            <h3>JavaScript, React</h3>
+            <h3>Typescript, React, Postgres, Node, Express, TypeORM, JWT</h3>
             <p>
-              Animates popular array sorting algorithms with a bar chart.
+              I made this project to sharpen up on database skills and React.
             </p>
             <div class="link-group">
-            <a href="https://shanec0.github.io/Sorter">Website</a>
-            <a href="https://github.com/shanec0/sorter">Repository</a>
+            <a href="https://github.com/shanec0/classroom">Repository</a>
           </div>
           </div>
-          <img src="./images/sorter.PNG" alt="sorter" />
+          <img src="./images/classroom.PNG" alt="classroom" />
         </div>
       </div>
 
