--- a/index.html
+++ b/index.html
@@ -35,6 +35,25 @@
       </div>
 
       <div class="section">
+        <div class="disrupt">
+          <h1>Disrupt</h1>
+
+          <div class="info">
+            <h2>Real-Time chat desktop app.</h2>
+
+            <h3>TypeScript, Electron, React, Express, PostgreSQL, Socket.IO, TypeORM</h3>
+            <p>
+              Chat application with servers and channels that functions like Discord.
+            </p>
+            <div class="link-group">
+            <a href="https://github.com/shanec0/disrupt">Repository</a>
+          </div>
+          </div>
+          <img src="./images/Disrupt.PNG" alt="disrupt" />
+        </div>
+      </div>
+
+      <div class="section">
         <div class="pathfinder">
           <h1>Pathfinder</h1>
 
